squash them bugs

--- a/client/stylesheets/buttonStyles.css
+++ b/client/stylesheets/buttonStyles.css
@@ -245,7 +245,7 @@
 }
 .leapBar {
   min-height: 4vmin;
-  font-size: calc(0.6rem + 0.4vmin);
+  font-size: calc(0.6rem + 0.5vmin);
   font-weight: 400;
 	padding: calc(0.5em + 0.5vw) calc(0.5em + 0.5vw);
 	border-bottom: 1px outset var(--silverfade);
